@@ -1,6 +1,10 @@
 AUTOMAKE_OPTIONS = dist-bzip2
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = fcgi src man
+if BUNDLED_FCGI
+  FCGI_SRC = fcgi
+endif
+
+SUBDIRS = $(FCGI_SRC) src man
 
 EXTRA_DIST = TODO COPYING.FCGI doc windows
